# shared/api/gateway/v1/gateway.openapi.yaml
@@ -189,7 +189,7 @@ paths:
         - Column
       responses:
         '204':
-          description: "Колонка успешно удалена"
+          description: "Позиция колонки успешно изменена"
         '400':
           description: "Ошибка запроса"
           content:
@@ -304,6 +304,58 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/GenericError"
+  /api/v1/boards/{boardId}/columns/{columnId}/tasks/{taskId}/update-position:
+    patch:
+      parameters:
+        - in: path
+          name: boardId
+          required: true
+          schema:
+            type: integer
+          description: ID доски
+        - in: path
+          name: columnId
+          required: true
+          schema:
+            type: integer
+          description: ID колонки
+        - in: path
+          name: taskId
+          required: true
+          schema:
+            type: integer
+          description: ID задачи
+      summary: "Изменение позиции задачи"
+      operationId: TaskUpdatePosition
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/TaskUpdatePositionRequestBody"
+      tags:
+        - Task
+      responses:
+        '204':
+          description: "Позиция задачи успешно изменена"
+        '400':
+          description: "Ошибка запроса"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+        '500':
+          description: "Ошибка сервера"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/InternalServerError"
+        default:
+          description: "Прочие ошибки"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GenericError"
 components:
   schemas:
     CreateBoardRequestBody:
@@ -335,6 +387,20 @@ components:
           description: "Название колонки"
           example: "TODO"
     ColumnUpdatePositionRequestBody:
+      type: object
+      required:
+        - left_position
+        - right_position
+      properties:
+        left_position:
+          type: number
+          description: "Номер позиции слева"
+          example: 2000
+        right_position:
+          type: number
+          description: "Номер позиции справа"
+          example: 3000
+    TaskUpdatePositionRequestBody:
       type: object
       required:
         - left_position
