# shared/pkg/openapi/gateway/v1/oas_request_encoders_gen.go
@@ -65,3 +65,17 @@ func encodeTaskCreateRequest(
 	ht.SetBody(r, bytes.NewReader(encoded), contentType)
 	return nil
 }
+
+func encodeTaskUpdatePositionRequest(
+	req *TaskUpdatePositionRequestBody,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
