# shared/pkg/openapi/gateway/v1/oas_router_gen.go
@@ -186,16 +186,15 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 									}
 
 									// Param: "taskId"
-									// Leaf parameter, slashes are prohibited
+									// Match until "/"
 									idx := strings.IndexByte(elem, '/')
-									if idx >= 0 {
-										break
+									if idx < 0 {
+										idx = len(elem)
 									}
-									args[2] = elem
-									elem = ""
+									args[2] = elem[:idx]
+									elem = elem[idx:]
 
 									if len(elem) == 0 {
-										// Leaf node.
 										switch r.Method {
 										case "POST":
 											s.handleTaskDeleteRequest([3]string{
@@ -208,6 +207,31 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 										}
 
 										return
+									}
+									switch elem[0] {
+									case '/': // Prefix: "/update-position"
+
+										if l := len("/update-position"); len(elem) >= l && elem[0:l] == "/update-position" {
+											elem = elem[l:]
+										} else {
+											break
+										}
+
+										if len(elem) == 0 {
+											// Leaf node.
+											switch r.Method {
+											case "PATCH":
+												s.handleTaskUpdatePositionRequest([3]string{
+													args[0],
+													args[1],
+													args[2],
+												}, elemIsEscaped, w, r)
+											default:
+												s.notAllowed(w, r, "PATCH")
+											}
+
+											return
+										}
 									}
 								}
 
@@ -481,16 +505,15 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 									}
 
 									// Param: "taskId"
-									// Leaf parameter, slashes are prohibited
+									// Match until "/"
 									idx := strings.IndexByte(elem, '/')
-									if idx >= 0 {
-										break
+									if idx < 0 {
+										idx = len(elem)
 									}
-									args[2] = elem
-									elem = ""
+									args[2] = elem[:idx]
+									elem = elem[idx:]
 
 									if len(elem) == 0 {
-										// Leaf node.
 										switch method {
 										case "POST":
 											r.name = TaskDeleteOperation
@@ -503,6 +526,32 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 											return r, true
 										default:
 											return
+										}
+									}
+									switch elem[0] {
+									case '/': // Prefix: "/update-position"
+
+										if l := len("/update-position"); len(elem) >= l && elem[0:l] == "/update-position" {
+											elem = elem[l:]
+										} else {
+											break
+										}
+
+										if len(elem) == 0 {
+											// Leaf node.
+											switch method {
+											case "PATCH":
+												r.name = TaskUpdatePositionOperation
+												r.summary = "Изменение позиции задачи"
+												r.operationID = "TaskUpdatePosition"
+												r.operationGroup = ""
+												r.pathPattern = "/api/v1/boards/{boardId}/columns/{columnId}/tasks/{taskId}/update-position"
+												r.args = args
+												r.count = 3
+												return r, true
+											default:
+												return
+											}
 										}
 									}
 								}
